# env-watcher

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: change_handler.rs  derive_base.rs  derive_snapshot.rs  snapshot.rs
src/: derive.rs  lib.rs  test.rs
