[package]
name = "env-watcher"
version = "0.1.0"
edition = "2021"
exclude = [
    "examples/*",
    ".github/*",
]

license = "MIT"
readme = "README.md"
repository = "https://github.com/SinmoWay/env-watcher"
keywords = ["env", "environment"]
categories = ["config", "os"]
description = "A simple library for viewing environment variables with a subscription to change any variables."

[dependencies]
crossbeam-channel = "0.5.1"
thiserror = "1.0.30"
spin_sleep = "1.0.0"
regex = "1.5.4"
diff-struct = "0.3.1"
log = "0.4.14"
state = { version = "0.5.2", optional = true }

[features]
default = ["derive"]
derive = ["state"]